2014-02-07  Glenn Morris  <rgm@gnu.org>

	* nsterm.m (syms_of_nsterm): Doc fix.

2014-02-06  Eli Zaretskii  <eliz@gnu.org>

	* w32.c (pMultiByteToWideChar, pWideCharToMultiByte): New
	variables: pointers through which to call the respective APIs.
	(filename_to_utf16, filename_from_utf16, filename_to_ansi)
	(filename_from_ansi, sys_link, check_windows_init_file): Call
	MultiByteToWideChar and WideCharToMultiByte through pointers.
	This is required on Windows 9X, where we dynamically load
	UNICOWS.DLL which has their non-stub implementations.
	(maybe_load_unicows_dll): Assign addresses to these 2 function
	pointers after loading UNICOWS.DLL.

	* w32fns.c (Fx_file_dialog, Fw32_shell_execute) [!CYGWIN]: Call
	MultiByteToWideChar and WideCharToMultiByte through function
	pointers.

	* w32.h (pMultiByteToWideChar, pWideCharToMultiByte): New
	declarations.

2014-02-06  Jan Djärv  <jan.h.d@swipnet.se>

	* nsterm.m (toggleFullScreen:): Hide menubar on secondary monitor
	for OSX >= 10.9 if separate spaces are used.
	(toggleFullScreen:): Use screen of w instead of fw (Bug#16659).

2014-02-06  Glenn Morris  <rgm@gnu.org>

	* buffer.c (cache-long-scans): Doc fix.

2014-02-05  Eli Zaretskii  <eliz@gnu.org>

	* w32fns.c (Fw32_shell_execute): Doc fix.

2014-02-05  Bastien Guerry  <bzg@gnu.org>

	* syntax.c (Fforward_word): Call Fconstrain_to_field with
	ESCAPE-FROM-EDGE set to `nil' (Bug#16453).

2014-02-05  Martin Rudalics  <rudalics@gmx.at>

	* fringe.c (draw_fringe_bitmap_1): Don't draw a fringe if it's
	outside the window (Bug#16649).

	* xdisp.c (note_mouse_highlight): When entering a margin area show
	a non-text cursor (Bug#16647).

2014-02-04  Paul Eggert  <eggert@cs.ucla.edu>

	* menu.c (Fx_popup_dialog): Remove label 'dialog_via_menu'.
	It prompted a compile-time diagnostic on GNU/Linux.
	Simplify to remove the need for the label.

2014-02-04  Eli Zaretskii  <eliz@gnu.org>

	* w32menu.c (w32_popup_dialog): Don't condition the whole function